CDK-deploy/cdk.out/cdk-hologram-display.template.json
{
 "Resources": {
  "cdkhologramdisplayAppVpc247733EB": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display-stl-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/Resource"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet1SubnetAB0883C1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1/Subnet"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet1RouteTableDB0894EA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1/RouteTable"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet1RouteTableAssociationD9F2B183": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet1RouteTableDB0894EA"
    },
    "SubnetId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet1SubnetAB0883C1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet1DefaultRoute82B6A7B5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cdkhologramdisplayAppVpcIGW5AE2CEFC"
    },
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet1RouteTableDB0894EA"
    }
   },
   "DependsOn": [
    "cdkhologramdisplayAppVpcVPCGWA66CAFD9"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet1EIP880F2C27": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1/EIP"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet1NATGateway66B35E5F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "cdkhologramdisplayAppVpcPublicSubnet1EIP880F2C27",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet1SubnetAB0883C1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "cdkhologramdisplayAppVpcPublicSubnet1DefaultRoute82B6A7B5",
    "cdkhologramdisplayAppVpcPublicSubnet1RouteTableAssociationD9F2B183"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet1/NATGateway"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet2Subnet6A4FCF80": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet2/Subnet"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet2RouteTable52917BC4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet2/RouteTable"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet2RouteTableAssociation92A0D9E9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet2RouteTable52917BC4"
    },
    "SubnetId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet2Subnet6A4FCF80"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "cdkhologramdisplayAppVpcPublicSubnet2DefaultRouteAD442A96": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "cdkhologramdisplayAppVpcIGW5AE2CEFC"
    },
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet2RouteTable52917BC4"
    }
   },
   "DependsOn": [
    "cdkhologramdisplayAppVpcVPCGWA66CAFD9"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet1SubnetE39935C5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet1/Subnet"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet1RouteTable3738CD35": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet1/RouteTable"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet1RouteTableAssociationAF015483": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPrivateSubnet1RouteTable3738CD35"
    },
    "SubnetId": {
     "Ref": "cdkhologramdisplayAppVpcPrivateSubnet1SubnetE39935C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet1DefaultRoute7F9F8BDA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet1NATGateway66B35E5F"
    },
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPrivateSubnet1RouteTable3738CD35"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet2Subnet533ADC78": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet2/Subnet"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet2RouteTable29F2F214": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet2/RouteTable"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet2RouteTableAssociation7AA48E2A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPrivateSubnet2RouteTable29F2F214"
    },
    "SubnetId": {
     "Ref": "cdkhologramdisplayAppVpcPrivateSubnet2Subnet533ADC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "cdkhologramdisplayAppVpcPrivateSubnet2DefaultRoute8724CD91": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "cdkhologramdisplayAppVpcPublicSubnet1NATGateway66B35E5F"
    },
    "RouteTableId": {
     "Ref": "cdkhologramdisplayAppVpcPrivateSubnet2RouteTable29F2F214"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "cdkhologramdisplayAppVpcIGW5AE2CEFC": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-hologram-display-stl-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/IGW"
   }
  },
  "cdkhologramdisplayAppVpcVPCGWA66CAFD9": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "cdkhologramdisplayAppVpcIGW5AE2CEFC"
    },
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/VPCGW"
   }
  },
  "cdkhologramdisplayAppVpcRestrictDefaultSecurityGroupCustomResource43994B05": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "cdkhologramdisplayAppVpc247733EB",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAppVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "cdkhologramdisplayAppVpc247733EB",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "dd5711540f04e06aa955d7f4862fc04e8cdea464cb590dae91ed2976bb78098e.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.dd5711540f04e06aa955d7f4862fc04e8cdea464cb590dae91ed2976bb78098e",
    "aws:asset:property": "Code"
   }
  },
  "cdkhologramdisplaySecurityGroupECSE9A06096": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "cdk-hologram-display/cdk-hologram-displaySecurityGroupECS",
    "GroupName": "cdk-hologram-display-stl-ecs-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displaySecurityGroupECS/Resource"
   }
  },
  "cdkhologramdisplaySecurityGroupECSfromcdkhologramdisplaycdkhologramdisplaySecurityGroupALBC43EDC6B85018777ADA6": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "ALB traffic",
    "FromPort": 8501,
    "GroupId": {
     "Fn::GetAtt": [
      "cdkhologramdisplaySecurityGroupECSE9A06096",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "cdkhologramdisplaySecurityGroupALB47C2CF30",
      "GroupId"
     ]
    },
    "ToPort": 8501
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displaySecurityGroupECS/from cdkhologramdisplaycdkhologramdisplaySecurityGroupALBC43EDC6B:8501"
   }
  },
  "cdkhologramdisplaySecurityGroupALB47C2CF30": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "cdk-hologram-display/cdk-hologram-displaySecurityGroupALB",
    "GroupName": "cdk-hologram-display-stl-alb-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displaySecurityGroupALB/Resource"
   }
  },
  "cdkhologramdisplayCluster2842017B": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayCluster/Resource"
   }
  },
  "cdkhologramdisplayCluster5214C17C": {
   "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
   "Properties": {
    "CapacityProviders": [
     "FARGATE",
     "FARGATE_SPOT"
    ],
    "Cluster": {
     "Ref": "cdkhologramdisplayCluster2842017B"
    },
    "DefaultCapacityProviderStrategy": []
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayCluster/cdk-hologram-displayCluster"
   }
  },
  "cdkhologramdisplayAlbE3D139B6": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Name": "cdk-hologram-display-stl",
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "cdkhologramdisplaySecurityGroupALB47C2CF30",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "cdkhologramdisplayAppVpcPublicSubnet1SubnetAB0883C1"
     },
     {
      "Ref": "cdkhologramdisplayAppVpcPublicSubnet2Subnet6A4FCF80"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "cdkhologramdisplayAppVpcPublicSubnet1DefaultRoute82B6A7B5",
    "cdkhologramdisplayAppVpcPublicSubnet1RouteTableAssociationD9F2B183",
    "cdkhologramdisplayAppVpcPublicSubnet2DefaultRouteAD442A96",
    "cdkhologramdisplayAppVpcPublicSubnet2RouteTableAssociation92A0D9E9"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAlb/Resource"
   }
  },
  "cdkhologramdisplayAlbcdkhologramdisplayHttpListenerD6E0644C": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "FixedResponseConfig": {
       "ContentType": "text/plain",
       "MessageBody": "Access denied",
       "StatusCode": "403"
      },
      "Type": "fixed-response"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "cdkhologramdisplayAlbE3D139B6"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAlb/cdk-hologram-displayHttpListener/Resource"
   }
  },
  "cdkhologramdisplayAlbcdkhologramdisplayHttpListenercdkhologramdisplayTargetGroupGroupED633F68": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Name": "cdk-hologram-display-tg",
    "Port": 8501,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "cdkhologramdisplayAppVpc247733EB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAlb/cdk-hologram-displayHttpListener/cdk-hologram-displayTargetGroupGroup/Resource"
   }
  },
  "cdkhologramdisplayAlbcdkhologramdisplayHttpListenercdkhologramdisplayTargetGroupRule80F9A535": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "cdkhologramdisplayAlbcdkhologramdisplayHttpListenercdkhologramdisplayTargetGroupGroupED633F68"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "http-header",
      "HttpHeaderConfig": {
       "HttpHeaderName": "X-Custom-Header",
       "Values": [
        "My_random_value_58dsv15e4s38"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "cdkhologramdisplayAlbcdkhologramdisplayHttpListenerD6E0644C"
    },
    "Priority": 1
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayAlb/cdk-hologram-displayHttpListener/cdk-hologram-displayTargetGroupRule/Resource"
   }
  },
  "cdkhologramdisplayWebappTaskDefTaskRole2C46B5AF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonBedrockFullAccess"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayWebappTaskDef/TaskRole/Resource"
   }
  },
  "cdkhologramdisplayWebappTaskDefC1A727F4": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Sub": "${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:1c815dc5d1a1101fb6642442c5a6862d386f093f1976cb8415bd5ce97864c2fa"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "cdkhologramdisplayWebappTaskDefcdkhologramdisplayWebContainerLogGroupA40E7FFB"
        },
        "awslogs-stream-prefix": "WebContainerLogs",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "cdk-hologram-displayWebContainer",
      "PortMappings": [
       {
        "ContainerPort": 8501,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "cdkhologramdisplayWebappTaskDefExecutionRoleC9593A47",
      "Arn"
     ]
    },
    "Family": "cdkhologramdisplaycdkhologramdisplayWebappTaskDef18F0934D",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "cdkhologramdisplayWebappTaskDefTaskRole2C46B5AF",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayWebappTaskDef/Resource"
   }
  },
  "cdkhologramdisplayWebappTaskDefcdkhologramdisplayWebContainerLogGroupA40E7FFB": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayWebappTaskDef/cdk-hologram-displayWebContainer/LogGroup/Resource"
   }
  },
  "cdkhologramdisplayWebappTaskDefExecutionRoleC9593A47": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayWebappTaskDef/ExecutionRole/Resource"
   }
  },
  "cdkhologramdisplayWebappTaskDefExecutionRoleDefaultPolicy487016BF": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:",
          {
           "Ref": "AWS::Region"
          },
          ":",
          {
           "Ref": "AWS::AccountId"
          },
          ":repository/",
          {
           "Fn::Sub": "cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}"
          }
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "cdkhologramdisplayWebappTaskDefcdkhologramdisplayWebContainerLogGroupA40E7FFB",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "cdkhologramdisplayWebappTaskDefExecutionRoleDefaultPolicy487016BF",
    "Roles": [
     {
      "Ref": "cdkhologramdisplayWebappTaskDefExecutionRoleC9593A47"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayWebappTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "cdkhologramdisplayECSService8BFDAC5D": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "cdkhologramdisplayCluster2842017B"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "cdk-hologram-displayWebContainer",
      "ContainerPort": 8501,
      "TargetGroupArn": {
       "Ref": "cdkhologramdisplayAlbcdkhologramdisplayHttpListenercdkhologramdisplayTargetGroupGroupED633F68"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "cdkhologramdisplaySecurityGroupECSE9A06096",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "cdkhologramdisplayAppVpcPrivateSubnet1SubnetE39935C5"
       },
       {
        "Ref": "cdkhologramdisplayAppVpcPrivateSubnet2Subnet533ADC78"
       }
      ]
     }
    },
    "ServiceName": "cdk-hologram-display-stl-front",
    "TaskDefinition": {
     "Ref": "cdkhologramdisplayWebappTaskDefC1A727F4"
    }
   },
   "DependsOn": [
    "cdkhologramdisplayAlbcdkhologramdisplayHttpListenercdkhologramdisplayTargetGroupRule80F9A535",
    "cdkhologramdisplayWebappTaskDefTaskRole2C46B5AF"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayECSService/Service"
   }
  },
  "cdkhologramdisplayCfDist574A45F2": {
   "Type": "AWS::CloudFront::Distribution",
   "Properties": {
    "DistributionConfig": {
     "DefaultCacheBehavior": {
      "AllowedMethods": [
       "GET",
       "HEAD",
       "OPTIONS",
       "PUT",
       "PATCH",
       "POST",
       "DELETE"
      ],
      "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
      "Compress": true,
      "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
      "TargetOriginId": "cdkhologramdisplaycdkhologramdisplayCfDistOrigin1F413CB2D",
      "ViewerProtocolPolicy": "redirect-to-https"
     },
     "Enabled": true,
     "HttpVersion": "http2",
     "IPV6Enabled": true,
     "Origins": [
      {
       "CustomOriginConfig": {
        "OriginProtocolPolicy": "http-only",
        "OriginSSLProtocols": [
         "TLSv1.2"
        ]
       },
       "DomainName": {
        "Fn::GetAtt": [
         "cdkhologramdisplayAlbE3D139B6",
         "DNSName"
        ]
       },
       "Id": "cdkhologramdisplaycdkhologramdisplayCfDistOrigin1F413CB2D",
       "OriginCustomHeaders": [
        {
         "HeaderName": "X-Custom-Header",
         "HeaderValue": "My_random_value_58dsv15e4s38"
        }
       ],
       "OriginShield": {
        "Enabled": false
       }
      }
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/cdk-hologram-displayCfDist/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S227bMAz9lr4r2pLtB9JkKwIUm+EUfS1omXG5yKIhUgkMw/8+2M7Fuz7xnMMjiRet7HL52S4f4CwLVx4Xngrb7RXc0cBZ3jp0K9u9Ns5sDuE125gsFZ7cPhUBddDuKOek+AKFx7t+19Yi7AiUONzMA/iyy4bwDfQJFM/QmizSCRTvF++CYgx4M0yVXNhaFdx7jUHNHl2KpO1T5NSMNfxX2IUqokhv0IntNj6JYhxcf8INNOBI2yzyiUqMs2bEfIVYwdClHLd4oEDXHn9XOChQwDjTLmf3GE/kprlNsDfoQZScZygL8BAcheq0st26aTy58e1nhvJxzE3V/sLnPhLFcPFc8Sz/ArFCvU1pTv9yS56mDc95bwhq2+U8pcaYsSc3bmtCw6DjG4igit2yO2Lc1VANPwN1yNkcGxZSju0jCBrPldjumatbZVfcG+c5lYfIQW23J [...]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-hologram-display/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "CloudFrontDistributionURL": {
   "Value": {
    "Fn::GetAtt": [
     "cdkhologramdisplayCfDist574A45F2",
     "DomainName"
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
